# AI_Job_Application_Agent

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  Architecture_decisions_record.md  DEVLOG.md  Dockerfile  Dockerfile.streamlit  README.md  ROADMAP.md  app.py  architecture_decisions_record.md  deployment-plan.md  pyproject.toml  render.yaml  requirements.txt
backend/: __init__.py  app.py  auth_models.py  config.py  maintenance.py  model_routing.py  models.py  nightly_eval.py  observability.py  prompt_registry.py  quota.py  rate_limit.py  request_auth.py  run_traces.py  subscriptions.py  tiers.py  workspace_models.py
docs/: DEVLOG.md  LATENCY-TEST-PLAN.md  NEXT-STEPS-FRONTEND.md  PUNCHLIST.md  README.md  architecture.md  deployment.md  google-signin-implementation-plan.md  lemon-squeezy.md  model-latency-and-cost-estimates.md  next-fastapi-transition.md  operations.md  project_strategy.md  recommended-changes-status-2026-03-16.md  supabase-app-users.sql  supabase-bootstrap.sql  supabase-resume-builder.sql  supabase-setup-checklist.md  supabase-usage-events.sql  supabase-usage-rollups-daily.sql  supabase-workflow-history-payloads-migration.sql  supabase-workflow-history.sql
frontend/: .env.example  .eslintrc.json  README.md  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  vitest.config.ts  vitest.setup.ts
modules/: jd_parser.py  linkedin_parser.py  resume_parser.py
prompts/: README.md  registry.json
scripts/: backfill_job_embeddings.py  compare_multi_provider_eval.py  eval_resume_parser.py  perf_assistant_stream.py
src/: __init__.py  assistant_service.py  auth_service.py  cached_jobs_store.py  config.py  cover_letter_builder.py  errors.py  exporters.py  history_store.py  jd_parser.py  job_backend_client.py  job_search_synonyms.py  linkedin_parser.py  llm_outage.py  logging_utils.py  openai_service.py  product_knowledge.py  prompts.py  quota_service.py  report_builder.py  resume_builder.py  resume_builder_store.py  resume_diff.py  resume_parser.py  saved_jobs_store.py  saved_workspace_store.py  schemas.py  schemas_llm_outputs.py  taxonomy.py  usage_store.py  user_store.py  utils.py  workflow_payloads.py
tests/: conftest.py  test_adversarial_inputs.py  test_agents_common.py  test_ashby_job_source.py  test_assistant_service.py  test_auth_service.py  test_backend_app.py  test_backend_assistant_stream.py  test_backend_auth.py  test_backend_workspace.py  test_backfill_job_embeddings.py  test_builder_utils.py  test_cached_jobs_store.py  test_config.py  test_cover_letter_agent.py  test_cover_letter_builder.py  test_error_handling_scenarios.py  test_error_messages.py  test_exporters.py  test_fit_service.py  test_greenhouse_job_source.py  test_history_store.py  test_jd_llm_parser_service.py  test_jd_parser.py  test_jd_summary_service.py  test_job_cache_service.py  test_job_service.py  (+39 more)
(+376 files in other folders)
