[project]
name = "ai-job-application-agent"
version = "0.1.0"
description = "Next.js and FastAPI job application copilot for grounded resume and cover letter generation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "openai==1.98.0",
    "requests==2.32.4",
    "supabase>=2.7,<3",
    "pypdf==5.9.0",
    "python-docx==1.1.2",
    "markdown-it-py==3.0.0",
    "weasyprint==64.1",
    "reportlab==3.6.12",
    "python-dotenv==1.0.1",
    "slowapi==0.1.9",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-timeout==2.3.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
timeout = 30

[tool.uv]
package = false
